# Rplayer

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  player.rs
src/components/: Dialog.vue  PlayVideo.vue
