[package]
name = "Rplayer"
version = "0.1.0"
description = "A video player based on Gstreamer and Tauri"
authors = ["DaSameVy"]
license = ""
repository = "https://github.com/Rplayer/Rplayer.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
gstreamer = "0.23.5"
gstreamer-play = "0.23.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
raw-window-handle = "0.6.2"
